# frontend

./: .gitattributes  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  main.cpp  test.orh  test.orh.old
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cloc.yml  codeql.yml  test.yml
Tests/: lexer_test.cpp
lexer/: lexer.cpp  lexer.hpp
parser/: parser.cpp  parser.hpp
